feature(books): user can request book > > refactor test code > write test for requesting books > create request book endpoint > update docs
[Finishes #166265858]
