# server/db/models/book.js
@@ -19,11 +19,15 @@ export default (sequelize, DataTypes) => {
       allowNull: true,
       type: DataTypes.INTEGER
     },
+    isbn: {
+      alloNull: false,
+      type: DataTypes.INTEGER
+    },
     categoryID: {
       allowNull: false,
       type: DataTypes.INTEGER
     },
-    status: {
+    active: {
       allowNull: true,
       type: DataTypes.BOOLEAN
     },
