# server/db/seeders/20190610140326-demo-requested-books.js
@@ -1,29 +1,27 @@
-
 /* eslint-disable require-jsdoc */
 import faker from 'faker';
 
 const date = new Date();
-const seeds = 500;
+const seeds = 11;
 let i;
 const bookSeeds = [];
 for (i = 0; i < seeds; i += 1) {
   bookSeeds.push({
     title: faker.random.words(),
     description: faker.lorem.sentence(),
-    amount: faker.commerce.price(),
-    authorID: 1,
-    active: faker.random.boolean(),
+    author: faker.fake("{{name.lastName}} {{name.firstName}} {{name.lastName}}"),
     categoryID: faker.random.number({'min': 1, 'max': 10}),
     year: faker.random.number({'min': 1900, 'max': 2019}),
-    isbn: faker.random.number({'min': 1934564, 'max': 3934564}),
+    userID: faker.random.number({'min': 1, 'max': 1}),
     createdAt: date,
     updatedAt: date
   });
 }
 export function up(queryInterface) {
-  return queryInterface.bulkInsert('Books', bookSeeds, {});
+  return queryInterface.bulkInsert('Requested_Books', bookSeeds, {});
 }
 
 export function down(queryInterface) {
-  return queryInterface.bulkDelete('Books', null, {});
+  return queryInterface.bulkDelete('Requested_Books', null, {});
 }
+
