# server/docs/hellobooks_api_doc.yaml
@@ -232,8 +232,10 @@ paths:
                   type: integer
                 authorID:
                   type: integer
-                status:
+                active:
                   type: boolean
+                isbn:
+                  type: integer
                 year:
                   type: integer
       responses:
@@ -287,6 +289,58 @@ paths:
                 $ref: "#/components/schemas/BookList"
         500:
           description: Added
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+  /books/request:
+    post:
+      tags:
+        - Books
+      summary: Request a book
+      description: User should be able to request a book
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                description:
+                  type: string
+                userID:
+                  type: integer
+                author:
+                  type: integer
+                isbn:
+                  type: integer
+                year:
+                  type: integer
+                categoryID:
+                  type: integer
+      responses:
+        201:
+          description: Request successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Book/request"
+        409:
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+        400:
+          description: Bad request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+        500:
+          description: Server error
           content:
             application/json:
               schema:
@@ -627,7 +681,7 @@ components:
           type: integer
         authorID:
           type: integer
-        status:
+        active:
           type: boolean
     
     BookList:
@@ -648,7 +702,7 @@ components:
             type: integer
           authorID:
             type: integer
-          status:
+          active:
             type: boolean
           createdAt:
             type: string
@@ -660,7 +714,7 @@ components:
     errorResponse:
       type: object
       properties:
-        status:
+        active:
           type: number
         error:
           type: string
@@ -668,7 +722,7 @@ components:
     successResponse:
       type: object
       properties:
-        status:
+        active:
           type: number
         message:
           type: string
